@@ -1,3 +1,6 @@
+Feb 08, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- allow tga as q3 mapshot
+
 Feb 02, 2004: Jordi Mallach <jordi@sindominio.net>
 - switch to intltoolize
 - add desktop file for GNOME and KDE
